removed bot padding from top content to fix bug on iphone7

--- a/css/index.css
+++ b/css/index.css
@@ -266,7 +266,7 @@ footer .copyright {
   background-repeat: no-repeat;
   background-position: 115% 50%;
   background-size: 65% 80%;
-  height: calc(100vh - 8rem);
+  height: 100vh;
   width: 100%;
   font-weight: bold;
   color: white;
